--- a/overlay/SystemUIOverlayPeridot/res/values/config.xml
+++ b/overlay/SystemUIOverlayPeridot/res/values/config.xml
@@ -16,4 +16,8 @@
 
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">1210px</dimen>
+
+     <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+          vibrator is capable of subtle vibrations -->
+     <bool name="config_vibrateOnIconAnimation">true</bool>
 </resources>
