--- a/overlay/FrameworkOverlayPeridot/res/values/config.xml
+++ b/overlay/FrameworkOverlayPeridot/res/values/config.xml
@@ -773,6 +773,13 @@
          phone object irrespective of this config -->
     <bool name="config_switch_phone_on_voice_reg_state_change">false</bool>
 
+    <!-- Number of physical SIM slots on the device. This includes both eSIM and pSIM slots, and
+         is not necessarily the same as the number of phones/logical modems supported by the device.
+         For example, a multi-sim device can have 2 phones/logical modems, but 3 physical slots,
+         or a single SIM device can have 1 phones/logical modems, but 2 physical slots (one eSIM
+         and one pSIM) -->
+    <integer name="config_num_physical_slots">2</integer>
+
     <!--The default "usage setting" indicating that the device is either a voice-centric
     device (1) or a data-centric device (2). A voice-centric device will require that any cellular
     service that it uses provides access to voice capability, and a data-centric device will
