--- a/overlay/SystemUIOverlayPeridot/res/values/config.xml
+++ b/overlay/SystemUIOverlayPeridot/res/values/config.xml
@@ -21,4 +21,8 @@
     <!-- Preferred refresh rate at keyguard, if supported by the display. Overrides
          keyguardMaxRefreshRate. -->
     <integer name="config_keyguardRefreshRate">120</integer>
+
+    <!-- Whether to disable Smart Pixels on UDFPS -->
+    <bool name="config_disableSmartPixelsOnUDFPS">true</bool>
+
 </resources>
