--- a/overlay/SystemUIOverlayPeridot/res/values/config.xml
+++ b/overlay/SystemUIOverlayPeridot/res/values/config.xml
@@ -1,27 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2024 The LineageOS Project
+     SPDX-FileCopyrightText: The LineageOS Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Doze: does this device support STATE_DOZE?  -->
     <bool name="doze_display_state_supported">true</bool>
 
-    <!-- Bottom margin size when fingerprint in display is active -->
-    <dimen name="keyguard_indication_margin_bottom">6dp</dimen>
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+     vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
 
-     <!-- Preferred refresh rate at keyguard, if supported by the display. Overrides
-          keyguardMaxRefreshRate. -->
-     <integer name="config_keyguardRefreshRate">60</integer>
-
-    <!-- Microns/ums (1000 um = 1mm) per pixel for the given device. If unspecified, UI that
-         relies on this value will not be sized correctly. -->
-    <item name="pixel_pitch" format="float" type="dimen">56.96</item>
-
-    <!-- Location on the screen of the center of the physical power button. -->
-    <dimen name="physical_power_button_center_screen_location_y">1210px</dimen>
-
-     <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
-          vibrator is capable of subtle vibrations -->
-     <bool name="config_vibrateOnIconAnimation">true</bool>
+    <!-- Preferred refresh rate at keyguard, if supported by the display. Overrides
+         keyguardMaxRefreshRate. -->
+    <integer name="config_keyguardRefreshRate">60</integer>
 </resources>
