peridot: overlay: pin SystemUI apk
* E PinnerService: Failed to pin file = /system_ext/priv-app/SystemUI/SystemUI.apk

Signed-off-by: Shikhar <Krtonia@gmail.com>

--- a/overlay/FrameworkOverlayPeridot/res/values/config.xml
+++ b/overlay/FrameworkOverlayPeridot/res/values/config.xml
@@ -819,6 +819,7 @@
          <item>"/system/framework/framework.jar"</item>
          <item>"/system/framework/services.jar"</item>
          <item>"/system/bin/surfaceflinger"</item>
+		 <item>"/system_ext/priv-app/SystemUI/SystemUI.apk"</item>
          <item>/vendor/framework/androidx.camera.extensions.impl.jar</item>
      </string-array>
 
