peridot: overlay: Allow ussd over ims
Signed-off-by: Shikhar <Krtonia@gmail.com>
Signed-off-by: GuidixX <guidixm@gmail.com>

--- a/overlay/FrameworkOverlayPeridot/res/values/config.xml
+++ b/overlay/FrameworkOverlayPeridot/res/values/config.xml
@@ -860,6 +860,10 @@
         "stopped" during initial boot of a device, or after an OTA update. Stopped state of
         an app is not changed during subsequent reboots.  -->
     <bool name="config_stopSystemPackagesByDefault">false</bool>
+	
+	<!-- Boolean indicating USSD over IMS is allowed.
+     If it is not supported due to modem limitations, USSD send over the CS pipe instead.-->
+    <bool name="config_allow_ussd_over_ims">true</bool>
 
     <!-- Whether to enable fp unlock when screen turns off on udfps devices -->
     <bool name="config_screen_off_udfps_enabled">true</bool>
