--- a/overlay/CarrierConfigOverlayPeridot/res/xml/vendor.xml
+++ b/overlay/CarrierConfigOverlayPeridot/res/xml/vendor.xml
@@ -12711,132 +12711,154 @@
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="854">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="855">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="856">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="857">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="858">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="859">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="860">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="861">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="862">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="863">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="864">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="865">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="866">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="867">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="868">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="869">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="870">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="871">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="872">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="873">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="405" mnc="874">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_disable_vice_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
         <boolean name="hide_enhanced_4g_lte_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="410" mnc="01">
@@ -12873,12 +12895,14 @@
         <boolean name="carrier_sa_mode_available_bool" value="true" />
         <boolean name="carrier_disable_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="424" mnc="3">
         <boolean name="config_show_vonr_icon_in_statusbar" value="true" />
         <boolean name="carrier_sa_mode_available_bool" value="true" />
         <boolean name="carrier_disable_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="454" mnc="00">
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
@@ -12948,6 +12972,7 @@
         <boolean name="carrier_sa_mode_available_bool" value="true" />
         <boolean name="carrier_disable_sa_mode_bool" value="false" />
         <boolean name="vonr_setting_visibility_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="470" mnc="3">
         <boolean name="carrier_volte_available_bool" value="true" />
